objects/PRT_Obligation__c.object
<CustomObject>
    <label>Obligation</label>
    <nameField>
        <label>Obligation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Obligation_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>PRT_Contract__c</referenceTo>
        <relationshipLabel>Obligations</relationshipLabel>
        <relationshipName>Talent_Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <summaryFilterItems>
            <field>PRT_Appearance__c.Decrement_Obligation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PRT_Appearance__c.Obligation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Fee__c</fullName>
        <inlineHelpText>If agreed. The fee for an appearance after the quantity agreed has been exhausted</inlineHelpText>
        <label>Additional Fee (Indicative)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appearance_Fee__c</fullName>
        <inlineHelpText>Fee per appearance within the agreed quantity</inlineHelpText>
        <label>Appearance Fee (Indicative)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_Remaining__c</fullName>
        <formula>IF(Quantity__c - Quantity_Used__c &lt; 0,0,Quantity__c - Quantity_Used__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Fee_Type__c</fullName>
        <label>Additional Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Obligation_Additional_Fee_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appearance_Fee_Type__c</fullName>
        <label>Appearance Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Obligation_Appearance_Fee_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Restriction_Hours__c</fullName>
        <label>Time Restriction (Hours)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Expiry_on_or_after_Start</fullName>
        <active>true</active>
        <errorConditionFormula>Expiry_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>It cannot expiry before it has started.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Restricted_Require_Hours</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;Personal Appearance (Time Restricted)&quot;),   ISNULL(Time_Restriction_Hours__c) )</errorConditionFormula>
        <errorDisplayField>Time_Restriction_Hours__c</errorDisplayField>
        <errorMessage>You must record the number of hours when selecting a type of Personal Appearance (Time Restricted)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Additional_Fee_Required_if_Per_Appearanc</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(  Additional_Fee_Type__c , &quot;Per Appearance&quot;) ,ISNULL(  Additional_Fee__c  ))</errorConditionFormula>
        <errorDisplayField>Additional_Fee__c</errorDisplayField>
        <errorMessage>You must enter a fee if the additional fee type is Per Appearance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appearance_Fee_Required_if_Per_Appearanc</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Appearance_Fee_Type__c , &quot;Per Appearance&quot;) ,ISNULL( Appearance_Fee__c ))</errorConditionFormula>
        <errorDisplayField>Appearance_Fee__c</errorDisplayField>
        <errorMessage>You must enter a fee if the appearance type is Per Appearance</errorMessage>
    </validationRules>
</CustomObject>